Service-Invocation/Service-Invocation-1/WeatherForecast/k8s/multideployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apidotnet
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: apidotnet
        image: sshrav/apidotnet:2.0
        ports:
        - containerPort: 80
        - containerPort: 443
      - name: mssql
        image: mcr.microsoft.com/mssql/rhel/server:2019-latest
        volumeMounts:
        - name: mssqldb
          mountPath: /var/opt/mssql   
      volumes:
      - name: mssqldb
        persistentVolumeClaim:
          claimName: mssql-data
