Service-Invocation/Service-Invocation-1/WeatherForecast/k8s/loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 80
  - name: https
    protocol: TCP
    port: 8443
    targetPort: 443
  type: LoadBalancer
